--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                     </ul>
                                     <h6>Technologies Used:</h6>
                                     <p>Python, PIL, Matplotlib, Google Sheets API</p>
-                                    <a href="https://github.com/PlatosCodes/pixelgen" target="_blank" class="project-link">
+                                    <a href="https://www.teacherspayteachers.com/Store/Merola-Merchandise/Search:pixel+art/Order:Most-Recent#seller_details_tabs" target="_blank" class="project-link">
                                         <img src="./images/open-external-link-icon.webp" alt="Live">
                                     </a>
                                     <a href="https://github.com/PlatosCodes/pixelgen" target="_blank" class="project-link">
