--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             muted
                             preload="none"
                             style="display: none;"
-                            data-hover-src="./videos/nick_website_demo.mp4">
+                            data-hover-src="./videos/pixel_demo.mp4">
                         </video>
                         <div class="project-title-container">
                             <div class="project-links">
@@ -284,7 +284,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <video id="modalVideo2" class="video-fluid" autoplay loop muted poster="./images/pixel_demo_img.png">
-                                        <source src="./videos/nick_website_demo.mp4" type="video/mp4">
+                                        <source src="./videos/pixel_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <p>An innovative tool transforming the creation of educational pixel art worksheets, enhancing both quality and efficiency.</p>
