add moms recipes demo video

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         </video>
                         <div class="project-title-container">
                             <div class="project-links">
-                                <a href="https://github.com/PlatosCodes/pixelgen" target="_blank" class="project-link">
+                                <a href="https://www.teacherspayteachers.com/Store/Merola-Merchandise/Search:pixel+art/Order:Most-Recent#seller_details_tabs" target="_blank" class="project-link">
                                     <img src="./images/open-external-link-icon.webp" alt="Live">
                                 </a>
                                 <h3 class="project-title">Pixel Worksheet Generator</h3>
@@ -196,7 +196,7 @@
                             muted
                             preload="none"
                             style="display: none;"
-                            data-hover-src="./videos/nick_website_demo.mp4">
+                            data-hover-src="./videos/moms_recipes_demo.mp4">
                         </video>
                         <div class="project-title-container">
                             <div class="project-links">
@@ -321,7 +321,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <video id="modalVideo3" class="video-fluid" autoplay loop muted poster="./images/ms_img.png">
-                                        <source src="./videos/nick_website_demo.mp4" type="video/mp4">
+                                        <source src="./videos/moms_recipes_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>                                    
                                     <p>A backend application to digitally preserve and share cherished family recipes, demonstrating technical skill and personal sentiment.</p>
