add moms recipes demo image

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     </div>
                     
                     <div class="project-card" data-toggle="modal" data-target="#projectModal3" onclick="toggleProjectVideo(this)">
-                        <img src="./images/placeholder_img.jpg" class="project-image" alt="Placeholder">
+                        <img src="./images/moms_recipes_demo_img.png" class="project-image" alt="Placeholder">
                         <video 
                             class="project-video lazy" 
                             loop
@@ -320,7 +320,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <video id="modalVideo3" class="video-fluid" autoplay loop muted poster="./images/ms_img.png">
+                                    <video id="modalVideo3" class="video-fluid" autoplay loop muted poster="./images/moms_recipes_demo_img.png">
                                         <source src="./videos/moms_recipes_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>                                    
