add portfolio demo video

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                             muted
                             preload="none"
                             style="display: none;"
-                            data-hover-src="">
+                            data-hover-src="./videos/portfolio_demo.mp4">
                         </video>
                         <div class="project-title-container">
                             <div class="project-links">
@@ -375,7 +375,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <video id="modalVideo1" class="video-fluid" autoplay loop muted poster="./images/portfolio_thumbnail.png">
-                                        <source src="." type="video/mp4">
+                                        <source src="./videos/portfolio_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
                                     <p>This project showcases my development journey and the various projects I have worked on. It includes detailed descriptions, technologies used, and links to live demos and code repositories.</p>
