fix autoplay issues and duplicate script.js

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModal1" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label" aria-hidden="true" data-video-src="./videos/nick_website_demo.mp4">
+                    <div class="modal fade" id="projectModalMerolaStation" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label" aria-hidden="true" data-video-src="./videos/nick_website_demo.mp4">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -333,7 +333,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <video id="modalVideo1" class="video-fluid" autoplay loop muted poster="./images/ms_img.png">
+                                    <video id="modalVideo2" class="video-fluid" autoplay loop muted poster="./images/ms_img.png">
                                         <source src="./videos/merola_station_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
@@ -374,7 +374,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <video id="modalVideo1" class="video-fluid" autoplay loop muted poster="./images/portfolio_thumbnail.png">
+                                    <video id="modalVideo3" class="video-fluid" autoplay loop muted poster="./images/portfolio_thumbnail.png">
                                         <source src="./videos/portfolio_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
@@ -402,7 +402,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label" aria-hidden="true">
+                    <div class="modal fade" id="projectModalPixelArt" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -412,7 +412,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <video id="modalVideo2" class="video-fluid" autoplay loop muted poster="./images/pixel_demo_img.png">
+                                    <video id="modalVideo4" class="video-fluid" autoplay loop muted poster="./images/pixel_demo_img.png">
                                         <source src="./videos/pixel_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
@@ -439,7 +439,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModal3" tabindex="-1" role="dialog" aria-labelledby="projectModal3Label" aria-hidden="true">
+                    <div class="modal fade" id="projectModalMomsRecipes" tabindex="-1" role="dialog" aria-labelledby="projectModal3Label" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -449,7 +449,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <video id="modalVideo3" class="video-fluid" autoplay loop muted poster="./images/moms_recipes_demo_img.png">
+                                    <video id="modalVideo5" class="video-fluid" autoplay loop muted poster="./images/moms_recipes_demo_img.png">
                                         <source src="./videos/moms_recipes_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>                                    
@@ -477,7 +477,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModal4" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label" aria-hidden="true" data-video-src="./videos/nick_website_demo.mp4">
+                    <div class="modal fade" id="projectModalNickWebsite" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label" aria-hidden="true" data-video-src="./videos/nick_website_demo.mp4">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -487,7 +487,7 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    <video id="modalVideo4" class="video-fluid" autoplay loop muted poster="./images/nick_img.png">
+                                    <video id="modalVideo6" class="video-fluid" autoplay loop muted poster="./images/nick_img.png">
                                         <source src="./videos/nick_website_demo.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>                                    <p>A visually engaging and responsive portfolio website showcasing the professional work of Creative Director, Nick Merola.</p>
@@ -591,6 +591,5 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="script.js" defer></script>
 </body>
 </html>
