fix project modals

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <h2>My Projects</h2>
                 <p>Click on a project to learn more!</p>
                 <div class="project-grid">
-                    <div class="project-card" data-toggle="modal" data-target="#projectModalDesserted" onclick="toggleProjectVideo(this)">
+                    <div class="project-card" data-toggle="modal" data-target="#projectModal1" onclick="toggleProjectVideo(this)">
                         <img src="./images/desserted_img.webp" class="project-image" alt="Desserted Game Thumbnail">
                         <video 
                             class="project-video lazy" 
@@ -165,7 +165,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-card" data-toggle="modal" data-target="#projectModal1" onclick="toggleProjectVideo(this)">
+                    <div class="project-card" data-toggle="modal" data-target="#projectModal2" onclick="toggleProjectVideo(this)">
                         <img src="./images/ms_img.png" class="project-image" alt="Merola Station Thumbnail">
                         <video 
                             class="project-video lazy" 
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     </div>
-                    <div class="project-card" data-toggle="modal" data-target="#projectModalPortfolio" onclick="toggleProjectVideo(this)">
+                    <div class="project-card" data-toggle="modal" data-target="#projectModal3" onclick="toggleProjectVideo(this)">
                         <img src="./images/portfolio_thumbnail.png" class="project-image" alt="Portfolio Project Thumbnail">
                         <video 
                             class="project-video lazy" 
@@ -209,7 +209,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-card" data-toggle="modal" data-target="#projectModal2" onclick="toggleProjectVideo(this)">
+                    <div class="project-card" data-toggle="modal" data-target="#projectModal4" onclick="toggleProjectVideo(this)">
                         <img src="./images/pixel_demo_img.png" class="project-image" alt="Placeholder">
                         <video 
                             class="project-video lazy" 
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                     
-                    <div class="project-card" data-toggle="modal" data-target="#projectModal3" onclick="toggleProjectVideo(this)">
+                    <div class="project-card" data-toggle="modal" data-target="#projectModal5" onclick="toggleProjectVideo(this)">
                         <img src="./images/moms_recipes_demo_img.png" class="project-image" alt="Placeholder">
                         <video 
                             class="project-video lazy" 
@@ -255,7 +255,7 @@
                         </div>
                     </div>
                     
-                    <div class="project-card" data-toggle="modal" data-target="#projectModal4" onclick="toggleProjectVideo(this)">
+                    <div class="project-card" data-toggle="modal" data-target="#projectModal6" onclick="toggleProjectVideo(this)">
                         <img src="./images/nick_img.png" class="project-image" alt="Placeholder">
                         <video 
                             class="project-video lazy" 
@@ -278,11 +278,11 @@
                         </div>
                     </div>
                     <!-- Desserted Project Modal -->
-                    <div class="modal fade" id="projectModalDesserted" tabindex="-1" role="dialog" aria-labelledby="projectModalDessertedLabel" aria-hidden="true">
+                    <div class="modal fade" id="projectModal1" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label" aria-hidden="true">
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="projectModalDessertedLabel">Desserted: The Dessert Card Game</h5>
+                                    <h5 class="modal-title" id="projectModal1Label">Desserted: The Dessert Card Game</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -323,7 +323,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModalMerolaStation" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label" aria-hidden="true" data-video-src="./videos/nick_website_demo.mp4">
+                    <div class="modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label" aria-hidden="true" data-video-src="./videos/merola_station_demo.mp4">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -364,11 +364,11 @@
                         </div>
                     </div>
                     <!-- Portfolio Project Modal -->
-                    <div class="modal fade" id="projectModalPortfolio" tabindex="-1" role="dialog" aria-labelledby="projectModalPortfolioLabel" aria-hidden="true">
+                    <div class="modal fade" id="projectModal3" tabindex="-1" role="dialog" aria-labelledby="projectModal3Label" aria-hidden="true">
                         <div class="modal-dialog modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="projectModalPortfolioLabel">My Portfolio Project</h5>
+                                    <h5 class="modal-title" id="projectModal3Label">My Portfolio Project</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -402,11 +402,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModalPixelArt" tabindex="-1" role="dialog" aria-labelledby="projectModal2Label" aria-hidden="true">
+                    <div class="modal fade" id="projectModal4" tabindex="-1" role="dialog" aria-labelledby="projectModal4Label" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="projectModal2Label">Pixel Worksheet Generator</h5>
+                                    <h5 class="modal-title" id="projectModal4Label">Pixel Worksheet Generator</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -439,11 +439,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModalMomsRecipes" tabindex="-1" role="dialog" aria-labelledby="projectModal3Label" aria-hidden="true">
+                    <div class="modal fade" id="projectModal5" tabindex="-1" role="dialog" aria-labelledby="projectModal5Label" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="projectModal3Label">Mom's Recipes</h5>
+                                    <h5 class="modal-title" id="projectModal5Label">Mom's Recipes</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
@@ -477,11 +477,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="modal fade" id="projectModalNickWebsite" tabindex="-1" role="dialog" aria-labelledby="projectModal1Label" aria-hidden="true" data-video-src="./videos/nick_website_demo.mp4">
+                    <div class="modal fade" id="projectModal6" tabindex="-1" role="dialog" aria-labelledby="projectModal6Label" aria-hidden="true" data-video-src="./videos/nick_website_demo.mp4">
                         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="projectModal4Label">Nick Merola's Portfolio Website</h5>
+                                    <h5 class="modal-title" id="projectModal6Label">Nick Merola's Portfolio Website</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
